Fix Shopify CSS on mobile mode

--- a/css/style.css
+++ b/css/style.css
@@ -1120,7 +1120,7 @@ footer {
   gap: 50px;
   margin: 0 0 60px 0;
   padding: 0 30px;
-  height: 300px;
+  min-height: 300px;
   overflow: hidden;
 
   background-image: linear-gradient(
@@ -1138,7 +1138,7 @@ footer {
 }
 #shop .shop-banner {
   display: block;
-  height: 100%;
+  height: 300px;
   z-index: 1;
 }
 #shop .title {
@@ -1173,11 +1173,15 @@ footer {
     position: absolute;
   }
   #shop .card-body {
-    position: absolute;
+    position: relative;
     display: inline-block;
     padding: 20px;
     height: 100%;
-    background-color: rgba(255,255,255,.9);
+    background-image: linear-gradient(
+      to right,
+      rgba(255,255,255,0.9) calc(100% - 40px),
+      transparent 100%
+    );
     z-index: 2;
   }
 }
